--- a/public/i18n/ru.json
+++ b/public/i18n/ru.json
@@ -129,7 +129,7 @@
     {
       "data": {
         "stringId": 322,
-        "text": "Стейкай Bxn, получай SYRUP."
+        "text": "Стейкай Defi, получай SYRUP."
       }
     },
     {
@@ -219,7 +219,7 @@
     {
       "data": {
         "stringId": 358,
-        "text": "Bxn Цена"
+        "text": "Defi Цена"
       }
     },
     {
@@ -645,7 +645,7 @@
     {
       "data": {
         "stringId": 534,
-        "text": "Bxn Статистика"
+        "text": "Defi Статистика"
       }
     },
     {
