--- a/public/i18n/zh-TW.json
+++ b/public/i18n/zh-TW.json
@@ -129,7 +129,7 @@
     {
       "data": {
         "stringId": 322,
-        "text": "\u8cea\u62bc Bxn\uff0c\u4ee5\u53d6\u5f97 Syrup\u3002"
+        "text": "\u8cea\u62bc Defi\uff0c\u4ee5\u53d6\u5f97 Syrup\u3002"
       }
     },
     {
@@ -657,7 +657,7 @@
     {
       "data": {
         "stringId": 534,
-        "text": "Bxn \u7d71\u8a08\u8cc7\u6599"
+        "text": "Defi \u7d71\u8a08\u8cc7\u6599"
       }
     },
     {
